--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Big Task
         shell: pwsh
         run: |
-          $makeversion = [string] "${{ inputs.makeversion }}"
+          $makeversion = [string] "${{ matrix.makeversion }}"
           .\makexrsys.ps1
