--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,8 @@ name: AutoMakeXRSYS
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'
+    # - cron: '0 0 * * *' #nightly
+    - cron: '0 0 * * 3' #weekly
 
 jobs:
   makexrsys:
