--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -19,6 +19,7 @@ jobs:
           - w10lt2164
           - w10lt1964
           - w10lt1664
+          - w7pro64
         isosd: 
           - true
           - false
