refactor(makexrsys): upgrade win7 to ultimate

--- a/.github/workflows/makexrsys.yml
+++ b/.github/workflows/makexrsys.yml
@@ -18,7 +18,7 @@ on:
           - w10lt2164
           - w10lt1964
           - w10lt1664
-          - w7pro64
+          - w7ult64
       fulldrv:
         description: 'Add Full Drivers'
         required: false
