--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -23,7 +23,7 @@ jobs:
           - w10lt2164
           - w10lt1964
           - w10lt1664
-          - w7pro64
+          - w7ult64
         fulldrv: 
           - true
           - false
