feat(makexrsys): add support for Windows 11 26H1
Signed-off-by: MadDogOwner <xiaoran@xrgzs.top>

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,6 +13,8 @@ jobs:
       fail-fast: false
       matrix:
         target: 
+          - w1126h1a64
+          - w1126h164
           # - w1125h2a64
           - w1125h264
           # - w1123h2a64
@@ -29,6 +31,8 @@ jobs:
           - false
         # no arm64 fulldrv
         exclude:
+          - target: w1126h1a64
+            fulldrv: true
           - target: w1125h2a64
             fulldrv: true
           - target: w1123h2a64
